# cookiecutter-ebs-drf

./: .env.example  cookiecutter.json
apps/common/: utils.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
test/: .env.example  .gitignore
test/apps/common/: middlewares.py  urls.py
test/apps/common/management/commands/: default_model.txt
test/config/: asgi.py  celery.py  settings.py  wsgi.py
{{cookiecutter.directory_name}}/: .env.example  .gitignore  pyproject.toml
{{cookiecutter.directory_name}}/apps/common/: apps.py  backends.py  helpers.py  middlewares.py  mixins.py  pagination.py
{{cookiecutter.directory_name}}/apps/common/management/commands/: default_model.txt  default_serializer.txt  default_urls.txt  default_view.txt  make_crud.py
{{cookiecutter.directory_name}}/config/: celery.py  settings.py  urls.py
